--- a/2019-10-ISEM/assets/css/extra.css
+++ b/2019-10-ISEM/assets/css/extra.css
@@ -813,3 +813,54 @@
   font-style: italic;
   text-align: start;
 }
+
+
+/* Extra CSS */
+.remark-slide-content h1 {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.pull-left h1 h2 h3 {
+  margin-top: 5px;
+}
+.h2nm {
+  font-size: 45px;
+  margin: 0px;
+  color: black;
+}
+.h1sm {
+  margin: 5px;
+  font-size: 55px;
+  color: black;
+}
+.title-slide {
+  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png);
+  background-repeat: no-repeat;
+  background-size: 150px;
+  background-position: bottom right;
+  background-color: #fdf6e3;
+  font-color: black;
+}
+.title-slide > h3 {
+  color: black;
+}
+.f25 {
+  font-size: 25px;
+}
+.footer {
+  position: absolute;
+  left: 10px;
+  bottom: 0;
+  width: 100%;
+  color: black;
+  font-size: 12px;
+  line-height: 0px;
+  font-style: italic;
+  text-align: start;
+}
+.img-credit {
+  position: absolute;
+  font-size: 0.4em;
+  text-align: center;
+  width: 100%;
+}
