--- a/2019-10-ISEM/assets/css/extra.css
+++ b/2019-10-ISEM/assets/css/extra.css
@@ -1,288 +1,16 @@
 
 
 /* Extra CSS */
-.remark-slide-content h1 > h2 {
-  margin-top: 5px;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 > h2 {
-  margin-top: 5px;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 > h2 {
-  margin-top: 5px;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 > h2 {
-  margin-top: 5px;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 h2 {
-  margin-top: 5px;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin-bottom: 5px;
-  font-size: 55px;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin-bottom: 5px;
-  font-size: 55px;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-
-
-/* Extra CSS */
 .remark-slide-content h1 {
   margin-top: 5px;
   margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
   color: black;
 }
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
+.remark-slide-content h2 {
   color: black;
 }
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
+.remark-slide-content h3 {
   color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
 }
 .pull-left h1 h2 h3 {
   margin-top: 5px;
@@ -300,548 +28,13 @@
 .title-slide {
   background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png);
   background-repeat: no-repeat;
-  background-size: 150px;
-  background-position: bottom right;
-  background-colo: white;
-  color: black;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-.title-slide {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png);
-  background-repeat: no-repeat;
-  background-size: 150px;
-  background-position: bottom right;
-  background-colo: white;
-  font-color: black;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-.title-slide {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png);
-  background-repeat: no-repeat;
-  background-size: 150px;
-  background-position: bottom right;
-  background-colo: white;
-  font-color: black;
-}
-.title-slide h1 {
-  color: black;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-.title-slide {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png);
-  background-repeat: no-repeat;
-  background-size: 150px;
-  background-position: bottom right;
-  background-colo: white;
-  font-color: black;
-}
-.title-slide h1 h2 {
-  color: black;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-.title-slide {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png);
-  background-repeat: no-repeat;
-  background-size: 150px;
-  background-position: bottom right;
-  background-colo: white;
-  font-color: black;
-}
-.title-slide h1 > h2 {
-  color: black;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-.title-slide {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png);
-  background-repeat: no-repeat;
-  background-size: 150px;
-  background-position: bottom right;
-  background-colo: white;
-  font-color: black;
-}
-.title-slide h1 > h2 > h3 {
-  color: black;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-.title-slide {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png);
-  background-repeat: no-repeat;
-  background-size: 150px;
-  background-position: bottom right;
-  background-colo: white;
-  font-color: black;
-}
-.title-slide h1 > h2 > h3 {
-  color: black;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-.title-slide {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png);
-  background-repeat: no-repeat;
-  background-size: 150px;
-  background-position: bottom right;
-  background-colo: white;
-  font-color: black;
-}
-.title-slide h1 h2 h3 {
-  color: black;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-.title-slide {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png);
-  background-repeat: no-repeat;
-  background-size: 150px;
-  background-position: bottom right;
-  background-color: white;
-  font-color: black;
-}
-.title-slide h1 h2 h3 {
-  color: black;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-.title-slide {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png);
-  background-repeat: no-repeat;
-  background-size: 150px;
-  background-position: bottom right;
-  background-color: white;
-  font-color: black;
-}
-.title-slide.h1 .title-slide.h3 {
-  color: black;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-.title-slide {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png);
-  background-repeat: no-repeat;
-  background-size: 150px;
-  background-position: bottom right;
-  background-color: white;
-  font-color: black;
-}
-.title-slide > h3 {
-  color: black;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-.title-slide {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png);
-  background-repeat: no-repeat;
-  background-size: 150px;
-  background-position: bottom right;
-  background-color: white;
-  font-color: black;
-}
-.title-slide > h3 {
-  color: black;
-}
-.f25 {
-  font-size: 25px;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-.title-slide {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png);
-  background-repeat: no-repeat;
-  background-size: 150px;
-  background-position: bottom right;
+  background-size: 120px;
   background-color: #fdf6e3;
-  font-color: black;
-}
-.title-slide > h3 {
   color: black;
+  background-position-x: right;
+  background-position-y: 99%;
 }
-.f25 {
-  font-size: 25px;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-.title-slide {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png);
-  background-repeat: no-repeat;
-  background-size: 150px;
-  background-position: bottom right;
-  background-color: #fdf6e3;
-  font-color: black;
-}
-.title-slide > h3 {
-  color: black;
-}
-.f25 {
-  font-size: 25px;
-}
-.footer {
-  position: absolute;
-  left: 10px;
-  bottom: 0;
-  width: 100%;
-  color: black;
-  font-size: 15px;
-  line-height: 0px;
-  font-style: italic;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-.title-slide {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png);
-  background-repeat: no-repeat;
-  background-size: 150px;
-  background-position: bottom right;
-  background-color: #fdf6e3;
-  font-color: black;
-}
-.title-slide > h3 {
-  color: black;
-}
-.f25 {
-  font-size: 25px;
-}
-.footer {
-  position: absolute;
-  left: 10px;
-  bottom: 0;
-  width: 100%;
-  color: black;
-  font-size: 12px;
-  line-height: 0px;
-  font-style: italic;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-.title-slide {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png);
-  background-repeat: no-repeat;
-  background-size: 150px;
-  background-position: bottom right;
-  background-color: #fdf6e3;
-  font-color: black;
-}
-.title-slide > h3 {
-  color: black;
-}
-.f25 {
-  font-size: 25px;
-}
-.footer {
-  position: absolute;
-  left: 10px;
-  bottom: 0;
-  width: 100%;
-  color: black;
-  font-size: 12px;
-  line-height: 0px;
-  font-style: italic;
-  text-align: start;
-}
-
-
-/* Extra CSS */
-.remark-slide-content h1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.pull-left h1 h2 h3 {
-  margin-top: 5px;
-}
-.h2nm {
-  font-size: 45px;
-  margin: 0px;
-  color: black;
-}
-.h1sm {
-  margin: 5px;
-  font-size: 55px;
-  color: black;
-}
-.title-slide {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png);
-  background-repeat: no-repeat;
-  background-size: 150px;
-  background-position: bottom right;
-  background-color: #fdf6e3;
-  font-color: black;
-}
-.title-slide > h3 {
+.title-slide > h1 > h2 > h3 {
   color: black;
 }
 .f25 {
@@ -863,4 +56,14 @@
   font-size: 0.4em;
   text-align: center;
   width: 100%;
+}
+.pkg {
+  color: black;
+  font-weight: 400;
+  font-size: 95%;
+  font-family: IBM Plex Mono;
+  padding: 1px 4px;
+  background-color: #f6f8fa;
+  border-radius: 4px;
+  border: 1px solid #82c878;
 }
